--- a/static/scss/layout/_hero.scss
+++ b/static/scss/layout/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
     height: 80vh;
     min-height: 60rem;
-    overflow: hidden;
+    position: relative;
 
 
     &__content {
